--- a/public/index.html
+++ b/public/index.html
@@ -258,7 +258,7 @@
       camOn = false;
       updateLocalLabel();
       pushSystem(
-        'Camera/microphone are blocked in your browser settings. Enable them to use audio/video.',
+        'it looks like your camera/video is blocked.',
       );
     }
     return localStream;
